--- a/TapeHubDemo/View/ProductsPage.xaml
+++ b/TapeHubDemo/View/ProductsPage.xaml
@@ -6,7 +6,7 @@
              xmlns:controls="clr-namespace:TapeHubDemo.Control"
              Shell.FlyoutBehavior="Disabled"
              BackgroundColor="#FAF3E0"
-             Title="Products">
+             Title="{StaticResource ProductsTitle}">
 
     <!--
     The «ContentPage.BindingContext» (data binding context) of this page is set to an instance of «ShopBranchesViewModel»
@@ -59,9 +59,9 @@
                 <RowDefinition Height="Auto" />
             </Grid.RowDefinitions>
 
-            <Button Grid.Row="0" Text="Add" BackgroundColor="#4CAF50" TextColor="White" FontAttributes="Bold" Command="{Binding AddProductCommand}" />
-            <Button Grid.Row="1" Text="Edit" BackgroundColor="#2196F3" TextColor="White" FontAttributes="Bold" Command="{Binding EditProductCommand}" />
-            <Button Grid.Row="2" Text="Delete" BackgroundColor="#F44336" TextColor="White" FontAttributes="Bold" Command="{Binding DeleteProductCommand}" />
+            <Button Grid.Row="0" Text="{StaticResource ProductsTextAdd}" BackgroundColor="#4CAF50" TextColor="White" FontAttributes="Bold" Command="{Binding AddProductCommand}" />
+            <Button Grid.Row="1" Text="{StaticResource ProductsTextEdit}" BackgroundColor="#2196F3" TextColor="White" FontAttributes="Bold" Command="{Binding EditProductCommand}" />
+            <Button Grid.Row="2" Text="{StaticResource ProductsTextDelete}" BackgroundColor="#F44336" TextColor="White" FontAttributes="Bold" Command="{Binding DeleteProductCommand}" />
         </Grid>
     </AbsoluteLayout>
 </ContentPage>
