--- a/TapeHubDemo/View/ShopBranchesPage.xaml
+++ b/TapeHubDemo/View/ShopBranchesPage.xaml
@@ -6,7 +6,7 @@
              xmlns:controls="clr-namespace:TapeHubDemo.Control"
              Shell.FlyoutBehavior="Disabled"
              BackgroundColor="#FAF3E0"
-             Title="Shop Branches">
+             Title="{StaticResource ShopBranchesTitle}">
 
     <!-- Setting the data (binding) context of this page to an instance of «ShopBranchesViewModel» -->
     <ContentPage.BindingContext>
@@ -62,9 +62,9 @@
                 <RowDefinition Height="Auto" />
             </Grid.RowDefinitions>
 
-            <Button Grid.Row="0" Text="Add" BackgroundColor="#4CAF50" TextColor="White" FontAttributes="Bold" Command="{Binding AddBranchCommand}" />
-            <Button Grid.Row="1" Text="Edit" BackgroundColor="#2196F3" TextColor="White" FontAttributes="Bold" Command="{Binding EditBranchCommand}" />
-            <Button Grid.Row="2" Text="Delete" BackgroundColor="#F44336" TextColor="White" FontAttributes="Bold" Command="{Binding DeleteBranchCommand}" />
+            <Button Grid.Row="0" Text="{StaticResource ShopBranchesTextAdd}" BackgroundColor="#4CAF50" TextColor="White" FontAttributes="Bold" Command="{Binding AddBranchCommand}" />
+            <Button Grid.Row="1" Text="{StaticResource ShopBranchesTextEdit}" BackgroundColor="#2196F3" TextColor="White" FontAttributes="Bold" Command="{Binding EditBranchCommand}" />
+            <Button Grid.Row="2" Text="{StaticResource ShopBranchesTextDelete}" BackgroundColor="#F44336" TextColor="White" FontAttributes="Bold" Command="{Binding DeleteBranchCommand}" />
         </Grid>
     </AbsoluteLayout>
 </ContentPage>
